# oyama

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/app/: components.rs  settings.rs
src/app/components/: gallery.rs
src/app/components/common/: model_loader.rs
src/app/components/gallery/: gallery_settings.rs  menus.rs  root_dir_select.rs
src/app/components/gallery/gallery_settings/: message.rs  similarity_slider.rs  update.rs  view.rs
src/app/components/gallery/gallery_settings/similarity_slider/: message.rs  similarity_quality.rs  update.rs  view.rs
src/app/components/gallery/menus/: message.rs  view.rs
src/app/components/gallery/root_dir_select/: message.rs  update.rs  view.rs
src/app/utils/: gallery.rs
src/app/utils/gallery/: codec.rs  image_similarity.rs  image_tensor.rs
src/app/views/: gallery.rs
src/app/views/gallery/: message.rs  update.rs  util.rs  view.rs
