[package]
name = "oyama"
version = "0.1.0"
edition = "2024"

description = "Video explorer with offline AI power and visual panels."
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["video", "walk", "filter"]
repository = "https://github.com/nabbisen/oyama"
readme = "README.md"
rust-version = "1.90.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
incremental = false

[dependencies]
iced = { version = "0.14", features = ["image", "tokio"] }
rfd = "0.17"

swdir = "0"
app-json-settings = "2"
serde = { version = "1", features = ["derive"] }

# ai model loader
reqwest = { version = "0.13", default-features = false, features = ["multipart", "rustls"] }
tokio = { version = "1.49", default-features = false, features = ["fs"] }

# image comparison
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9" # 一般的なモデルの実装が含まれる
image = { version = "0", default-features = false, features = ["png"] }
anyhow = "1"

mp4 = "0.14"
openh264 = "0.9"
